* #2149, #2150: fixes for the clipboard palette. (tomeu)
* #2163 Arrow icons in the intro screen buttons. (marco)

Snapshot 4c352d1f83

* Adapt to the datastore API changes. (tomeu)

Snapshot ec7eb2ebbb

* Update the XO colors with a new list from walter. (marco)
* Refactored the intro screen UI to start matching the new design. (marco)
* #1720 Show the name of the wireless network to which we are connected. (tomeu)
* #1888 Fix opening items from the clipboard. (tomeu)
* #1984 Fix removing items from the clipboard. (tomeu)

Snapshot b83a9ec27d

* Fix font size on the XO. (marco)
* Make developer console work again. (marco)
* #2020 Use the new activity-stop icon. (marco)
* #2002 Tooltips for the zoom levels. (marco)
* #2018 Rename Save to Keep. (marco)
* #2020 Rename Close to Stop. (marco)

Snapshot 42f0bcc48d

* Fix broken import which was preventing startup. (marco)

Snapshot 757b2b8ce6

* #2031: Do not die if battery properties are unavailable. (marco)
* #1953: Retrieve friends' nicks from the profile. (tomeu)
* #1720: Show the owner's buddy menu in the Groups view. (tomeu)

Snapshot aa6a024368

* #1825: Fix tab label padding. (marco)
* #1823: Margin at the toolbar tabs bottom. (marco)
* #1872, #1934: Hide palettes when closing activities or switching views. (tomeu)

Snapshot f8cf7ff1ce

* Hide palettes when buttons are clicked. (edsiper)

Snapshot cebf25739b

* #1930: Only take preview before closing. (tomeu)

Snapshot 8af15d4e73

* Nicer tooltips. Improved sizing logic. (marco)
* Do not popdown the frame when palettes are active. (marco)
* Add macedonian translation. (ArangelAngov)
* Add brazilian translation. (DiegoZacarao)
* Some fixes for changing the selected clipboard object. (tomeu)
* Fix palettes around the mesh edges. (edsiper)

Snapshot de8b3b4c01

* Use HAL to get battery informations. 
* Improvements in the mesh view layout.
* Hide the active palette when another popup.
* Icons in the buddy menu items