@@ -1,3 +1,5 @@
+* #1888 Choose the correct mime type when adding text from Write to the
+  clipboard. (tomeu)
 * #2149, #2150: fixes for the clipboard palette. (tomeu)
 * #2163 Arrow icons in the intro screen buttons. (marco)
 
